{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 1740,
  "lineage": "28602843-a0be-abff-0cfc-e55cebd9fa26",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:767397659707:loadbalancer/app/appALB/1a9f943f70dd9a09",
            "arn_suffix": "app/appALB/1a9f943f70dd9a09",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "appALB-995334130.eu-west-3.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:767397659707:loadbalancer/app/appALB/1a9f943f70dd9a09",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "appALB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0755fee4fbecc3ba2"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b0eb999bed811f92"
              },
              {
                "subnet_id": "subnet-0d0fb1b6608448ecb"
              }
            ],
            "subnets": [
              "subnet-0b0eb999bed811f92",
              "subnet-0d0fb1b6608448ecb"
            ],
            "tags": {
              "Name": "appALB"
            },
            "tags_all": {
              "Name": "appALB"
            },
            "vpc_id": "vpc-0534577e7d342827b",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "module.security_groups.aws_security_group.frontend_sg",
            "module.subnets.aws_subnet.public_subnet1",
            "module.subnets.aws_subnet.public_subnet2",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:767397659707:listener/app/appALB/1a9f943f70dd9a09/a6b935691a62b647",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:767397659707:listener/app/appALB/1a9f943f70dd9a09/a6b935691a62b647",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:767397659707:loadbalancer/app/appALB/1a9f943f70dd9a09",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.app_alb",
            "module.security_groups.aws_security_group.frontend_sg",
            "module.subnets.aws_subnet.public_subnet1",
            "module.subnets.aws_subnet.public_subnet2",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:767397659707:listener/app/appALB/1a9f943f70dd9a09/5039008416a6ce6a",
            "certificate_arn": "arn:aws:acm:eu-west-3:767397659707:certificate/43614006-a848-42f0-a8c6-eed3af1ffaf4",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:767397659707:targetgroup/frontendTargetGroup/786facd79d768d19",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:767397659707:listener/app/appALB/1a9f943f70dd9a09/5039008416a6ce6a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:767397659707:loadbalancer/app/appALB/1a9f943f70dd9a09",
            "mutual_authentication": [
              {
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.app_alb",
            "module.alb.aws_lb_target_group.frontend_target_group",
            "module.security_groups.aws_security_group.frontend_sg",
            "module.subnets.aws_subnet.public_subnet1",
            "module.subnets.aws_subnet.public_subnet2",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:767397659707:targetgroup/frontendTargetGroup/786facd79d768d19",
            "arn_suffix": "targetgroup/frontendTargetGroup/786facd79d768d19",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:767397659707:targetgroup/frontendTargetGroup/786facd79d768d19",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "frontendTargetGroup",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0534577e7d342827b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "frontend_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-3:767397659707:targetgroup/frontendTargetGroup/786facd79d768d19-2024061810072423110000000f",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:767397659707:targetgroup/frontendTargetGroup/786facd79d768d19",
            "target_id": "i-088b3c01cb53c9847"
          },
          "dependencies": [
            "module.alb.aws_lb_target_group.frontend_target_group",
            "module.frontend_instances.aws_instance.frontend_instance",
            "module.security_groups.aws_security_group.frontend_sg",
            "module.subnets.aws_subnet.public_subnet1",
            "module.subnets.aws_subnet.public_subnet2",
            "module.vpc.aws_vpc.project_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-3:767397659707:targetgroup/frontendTargetGroup/786facd79d768d19-2024061810072412230000000e",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:767397659707:targetgroup/frontendTargetGroup/786facd79d768d19",
            "target_id": "i-0193d22669b7537f3"
          },
          "dependencies": [
            "module.alb.aws_lb_target_group.frontend_target_group",
            "module.frontend_instances.aws_instance.frontend_instance",
            "module.security_groups.aws_security_group.frontend_sg",
            "module.subnets.aws_subnet.public_subnet1",
            "module.subnets.aws_subnet.public_subnet2",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.backend_instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fda19674ff597992",
            "arn": "arn:aws:ec2:eu-west-3:767397659707:instance/i-06e3e4a599e40e70a",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06e3e4a599e40e70a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-080572c65a41ed905",
            "private_dns": "ip-10-0-2-28.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.28",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0fb3a08011095b162",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0a7eab10b629b3cba"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a0d7cde01c806cc1",
            "tags": {
              "Name": "BackendInstance1"
            },
            "tags_all": {
              "Name": "BackendInstance1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a7eab10b629b3cba"
            ]
          },
          "dependencies": [
            "module.security_groups.aws_security_group.app_sg",
            "module.subnets.aws_subnet.app_subnet1",
            "module.subnets.aws_subnet.app_subnet2",
            "module.vpc.aws_vpc.project_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fda19674ff597992",
            "arn": "arn:aws:ec2:eu-west-3:767397659707:instance/i-03ea06b720ed5a6a2",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03ea06b720ed5a6a2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0eb42c89fb8518fae",
            "private_dns": "ip-10-0-3-111.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.111",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b698a0aeb9637b24",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0a7eab10b629b3cba"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00f796de4eb5770bd",
            "tags": {
              "Name": "BackendInstance2"
            },
            "tags_all": {
              "Name": "BackendInstance2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a7eab10b629b3cba"
            ]
          },
          "dependencies": [
            "module.security_groups.aws_security_group.app_sg",
            "module.subnets.aws_subnet.app_subnet1",
            "module.subnets.aws_subnet.app_subnet2",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.database_instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fda19674ff597992",
            "arn": "arn:aws:ec2:eu-west-3:767397659707:instance/i-07137c18934906b4c",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07137c18934906b4c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04b3f6e71a804ce33",
            "private_dns": "ip-10-0-4-97.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.97",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-072b531e9f5bc2137",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-085d96d4ff9a0cc2a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b800f4c685250698",
            "tags": {
              "Name": "DatabaseInstance1"
            },
            "tags_all": {
              "Name": "DatabaseInstance1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-085d96d4ff9a0cc2a"
            ]
          },
          "dependencies": [
            "module.security_groups.aws_security_group.rds_sg",
            "module.subnets.aws_subnet.db_subnet1",
            "module.subnets.aws_subnet.db_subnet2",
            "module.vpc.aws_vpc.project_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fda19674ff597992",
            "arn": "arn:aws:ec2:eu-west-3:767397659707:instance/i-0035c3445c9b58348",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0035c3445c9b58348",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06b746ae78d13ea3c",
            "private_dns": "ip-10-0-5-158.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.5.158",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-067aec862c2ecc5ae",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-085d96d4ff9a0cc2a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ebf4fec1b2efa51b",
            "tags": {
              "Name": "DatabaseInstance2"
            },
            "tags_all": {
              "Name": "DatabaseInstance2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-085d96d4ff9a0cc2a"
            ]
          },
          "dependencies": [
            "module.security_groups.aws_security_group.rds_sg",
            "module.subnets.aws_subnet.db_subnet1",
            "module.subnets.aws_subnet.db_subnet2",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.frontend_instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "frontend_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00ac45f3035ff009e",
            "arn": "arn:aws:ec2:eu-west-3:767397659707:instance/i-088b3c01cb53c9847",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-088b3c01cb53c9847",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "testKeyPair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0665efc6044ca7974",
            "private_dns": "ip-10-0-0-110.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.110",
            "public_dns": "ec2-13-36-243-19.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.36.243.19",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b2cc1710676e924c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0755fee4fbecc3ba2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d0fb1b6608448ecb",
            "tags": {
              "Name": "FrontendInstance1"
            },
            "tags_all": {
              "Name": "FrontendInstance1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0755fee4fbecc3ba2"
            ]
          },
          "dependencies": [
            "module.security_groups.aws_security_group.frontend_sg",
            "module.subnets.aws_subnet.public_subnet1",
            "module.subnets.aws_subnet.public_subnet2",
            "module.vpc.aws_vpc.project_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00ac45f3035ff009e",
            "arn": "arn:aws:ec2:eu-west-3:767397659707:instance/i-0193d22669b7537f3",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0193d22669b7537f3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "testKeyPair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0aca1229fea7479b0",
            "private_dns": "ip-10-0-1-171.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.171",
            "public_dns": "ec2-13-38-18-112.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.38.18.112",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04a5178194fe4b6b7",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0755fee4fbecc3ba2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b0eb999bed811f92",
            "tags": {
              "Name": "FrontendInstance2"
            },
            "tags_all": {
              "Name": "FrontendInstance2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0755fee4fbecc3ba2"
            ]
          },
          "dependencies": [
            "module.security_groups.aws_security_group.frontend_sg",
            "module.subnets.aws_subnet.public_subnet1",
            "module.subnets.aws_subnet.public_subnet2",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05e46033eec4a6017",
            "arn": "arn:aws:ec2:eu-west-3:767397659707:elastic-ip/eipalloc-05e46033eec4a6017",
            "associate_with_private_ip": "subnet-0d0fb1b6608448ecb",
            "domain": "vpc",
            "id": "eipalloc-05e46033eec4a6017",
            "network_border_group": "eu-west-3",
            "public_dns": "ec2-13-36-222-49.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.36.222.49",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ElasticIPAddress1"
            },
            "tags_all": {
              "Name": "ElasticIPAddress1"
            },
            "vpc": true
          },
          "dependencies": [
            "module.subnets.aws_subnet.public_subnet1",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02b6818e4c3e85a51",
            "arn": "arn:aws:ec2:eu-west-3:767397659707:elastic-ip/eipalloc-02b6818e4c3e85a51",
            "associate_with_private_ip": "subnet-0b0eb999bed811f92",
            "domain": "vpc",
            "id": "eipalloc-02b6818e4c3e85a51",
            "network_border_group": "eu-west-3",
            "public_dns": "ec2-15-237-136-48.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.237.136.48",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ElasticIPAddress2"
            },
            "tags_all": {
              "Name": "ElasticIPAddress2"
            },
            "vpc": true
          },
          "dependencies": [
            "module.subnets.aws_subnet.public_subnet2",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05e46033eec4a6017",
            "association_id": "eipassoc-059cbcd096e323d83",
            "connectivity_type": "public",
            "id": "nat-048a1db65b06e16d0",
            "network_interface_id": "eni-06a183301147bdb66",
            "private_ip": "10.0.0.180",
            "public_ip": "13.36.222.49",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d0fb1b6608448ecb",
            "tags": {
              "Name": "NATGateway1"
            },
            "tags_all": {
              "Name": "NATGateway1"
            }
          },
          "dependencies": [
            "module.nat_gateway.aws_eip.eip1",
            "module.subnets.aws_subnet.public_subnet1",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02b6818e4c3e85a51",
            "association_id": "eipassoc-09419a8501770bf05",
            "connectivity_type": "public",
            "id": "nat-0c3491be905d63c1e",
            "network_interface_id": "eni-0e21e3e5b8b5eb1b4",
            "private_ip": "10.0.1.34",
            "public_ip": "15.237.136.48",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b0eb999bed811f92",
            "tags": {
              "Name": "NATGateway2"
            },
            "tags_all": {
              "Name": "NATGateway2"
            }
          },
          "dependencies": [
            "module.nat_gateway.aws_eip.eip2",
            "module.subnets.aws_subnet.public_subnet2",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0cadfb079a0f8d1b91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-048a1db65b06e16d0",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cadfb079a0f8d1b9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat_gateway.aws_eip.eip1",
            "module.nat_gateway.aws_nat_gateway.nat_gw1",
            "module.route_tables.aws_route_table.private_rt1",
            "module.subnets.aws_subnet.public_subnet1",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e6bdcc39a1ce5bba1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c3491be905d63c1e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e6bdcc39a1ce5bba",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat_gateway.aws_eip.eip2",
            "module.nat_gateway.aws_nat_gateway.nat_gw2",
            "module.route_tables.aws_route_table.private_rt2",
            "module.subnets.aws_subnet.public_subnet2",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0dc639a4b42d5e96e",
            "id": "r-rtb-0d7c056a910dc13f01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d7c056a910dc13f0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.route_tables.aws_route_table.public_rt",
            "module.vpc.aws_internet_gateway.project_igw",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:767397659707:route-table/rtb-0cadfb079a0f8d1b9",
            "id": "rtb-0cadfb079a0f8d1b9",
            "owner_id": "767397659707",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "PrivateRouteTableAZ1"
            },
            "tags_all": {
              "Name": "PrivateRouteTableAZ1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0534577e7d342827b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:767397659707:route-table/rtb-0e6bdcc39a1ce5bba",
            "id": "rtb-0e6bdcc39a1ce5bba",
            "owner_id": "767397659707",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "PrivateRouteTableAZ2"
            },
            "tags_all": {
              "Name": "PrivateRouteTableAZ2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0534577e7d342827b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:767397659707:route-table/rtb-0d7c056a910dc13f0",
            "id": "rtb-0d7c056a910dc13f0",
            "owner_id": "767397659707",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "PublicRouteTable"
            },
            "tags_all": {
              "Name": "PublicRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0534577e7d342827b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt1_assoc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0037fb2f1395b5b36",
            "route_table_id": "rtb-0cadfb079a0f8d1b9",
            "subnet_id": "subnet-0a0d7cde01c806cc1"
          },
          "dependencies": [
            "module.route_tables.aws_route_table.private_rt1",
            "module.subnets.aws_subnet.app_subnet1",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt1_assoc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0520587cf66ee9f36",
            "route_table_id": "rtb-0cadfb079a0f8d1b9",
            "subnet_id": "subnet-0b800f4c685250698"
          },
          "dependencies": [
            "module.route_tables.aws_route_table.private_rt1",
            "module.subnets.aws_subnet.db_subnet1",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt2_assoc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01bfe556bb8805429",
            "route_table_id": "rtb-0e6bdcc39a1ce5bba",
            "subnet_id": "subnet-00f796de4eb5770bd"
          },
          "dependencies": [
            "module.route_tables.aws_route_table.private_rt2",
            "module.subnets.aws_subnet.app_subnet2",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt2_assoc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0472092cb6353b936",
            "route_table_id": "rtb-0e6bdcc39a1ce5bba",
            "subnet_id": "subnet-0ebf4fec1b2efa51b"
          },
          "dependencies": [
            "module.route_tables.aws_route_table.private_rt2",
            "module.subnets.aws_subnet.db_subnet2",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04150d2ab34962f23",
            "route_table_id": "rtb-0d7c056a910dc13f0",
            "subnet_id": "subnet-0d0fb1b6608448ecb"
          },
          "dependencies": [
            "module.route_tables.aws_route_table.public_rt",
            "module.subnets.aws_subnet.public_subnet1",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09fc5eadd17cef9a0",
            "route_table_id": "rtb-0d7c056a910dc13f0",
            "subnet_id": "subnet-0b0eb999bed811f92"
          },
          "dependencies": [
            "module.route_tables.aws_route_table.public_rt",
            "module.subnets.aws_subnet.public_subnet2",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:767397659707:security-group/sg-0a7eab10b629b3cba",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a7eab10b629b3cba",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "AppInstanceSecurityGroup",
            "name_prefix": "",
            "owner_id": "767397659707",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "AppInstanceSecurityGroup"
            },
            "tags_all": {
              "Name": "AppInstanceSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0534577e7d342827b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:767397659707:security-group/sg-05097c78282f4be0e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05097c78282f4be0e",
            "ingress": [],
            "name": "EFSMountTargetSecurityGroup",
            "name_prefix": "",
            "owner_id": "767397659707",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EFSMountTargetSecurityGroup"
            },
            "tags_all": {
              "Name": "EFSMountTargetSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0534577e7d342827b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:767397659707:security-group/sg-0755fee4fbecc3ba2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0755fee4fbecc3ba2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "FrontendSecurityGroup",
            "name_prefix": "",
            "owner_id": "767397659707",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "FrontendSecurityGroup"
            },
            "tags_all": {
              "Name": "FrontendSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0534577e7d342827b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:767397659707:security-group/sg-085d96d4ff9a0cc2a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-085d96d4ff9a0cc2a",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "RDSSecurityGroup",
            "name_prefix": "",
            "owner_id": "767397659707",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "RDSSecurityGroup"
            },
            "tags_all": {
              "Name": "RDSSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0534577e7d342827b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "efs_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 2049,
            "id": "sgrule-2051366480",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05097c78282f4be0e",
            "security_group_rule_id": "sgr-04a40fa2475e09f6c",
            "self": false,
            "source_security_group_id": "sg-0a7eab10b629b3cba",
            "timeouts": null,
            "to_port": 2049,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.app_sg",
            "module.security_groups.aws_security_group.efs_sg",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:767397659707:network-acl/acl-0b4f7735e7f71a4a1",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0b4f7735e7f71a4a1",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "767397659707",
            "subnet_ids": [],
            "tags": {
              "Name": "PrivateNetworkACL"
            },
            "tags_all": {
              "Name": "PrivateNetworkACL"
            },
            "vpc_id": "vpc-0534577e7d342827b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:767397659707:network-acl/acl-08c4310ada617e052",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 65535
              }
            ],
            "id": "acl-08c4310ada617e052",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 120,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 110,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "767397659707",
            "subnet_ids": [],
            "tags": {
              "Name": "PublicNetworkACL"
            },
            "tags_all": {
              "Name": "PublicNetworkACL"
            },
            "vpc_id": "vpc-0534577e7d342827b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "private_acl_app_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-02b8a981d6dc929ac",
            "network_acl_id": "acl-0b4f7735e7f71a4a1",
            "subnet_id": "subnet-0a0d7cde01c806cc1"
          },
          "dependencies": [
            "module.subnets.aws_network_acl.private_acl",
            "module.subnets.aws_subnet.app_subnet1",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "private_acl_app_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0d0e82f6ce86e8834",
            "network_acl_id": "acl-0b4f7735e7f71a4a1",
            "subnet_id": "subnet-00f796de4eb5770bd"
          },
          "dependencies": [
            "module.subnets.aws_network_acl.private_acl",
            "module.subnets.aws_subnet.app_subnet2",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "private_acl_db_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-002317e00f3d599d4",
            "network_acl_id": "acl-0b4f7735e7f71a4a1",
            "subnet_id": "subnet-0b800f4c685250698"
          },
          "dependencies": [
            "module.subnets.aws_network_acl.private_acl",
            "module.subnets.aws_subnet.db_subnet1",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "private_acl_db_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-02775d40512cef0d6",
            "network_acl_id": "acl-0b4f7735e7f71a4a1",
            "subnet_id": "subnet-0ebf4fec1b2efa51b"
          },
          "dependencies": [
            "module.subnets.aws_network_acl.private_acl",
            "module.subnets.aws_subnet.db_subnet2",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "public_acl_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0751f2d139e33bc85",
            "network_acl_id": "acl-08c4310ada617e052",
            "subnet_id": "subnet-0d0fb1b6608448ecb"
          },
          "dependencies": [
            "module.subnets.aws_network_acl.public_acl",
            "module.subnets.aws_subnet.public_subnet1",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "public_acl_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-000cb35002ce0f9e7",
            "network_acl_id": "acl-08c4310ada617e052",
            "subnet_id": "subnet-0b0eb999bed811f92"
          },
          "dependencies": [
            "module.subnets.aws_network_acl.public_acl",
            "module.subnets.aws_subnet.public_subnet2",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3305282840",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0b4f7735e7f71a4a1",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 200,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_network_acl.private_acl",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/16",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1596715275",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0b4f7735e7f71a4a1",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 200,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_network_acl.private_acl",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2558217389",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-08c4310ada617e052",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 200,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_network_acl.public_acl",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3833450457",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-08c4310ada617e052",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 200,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_network_acl.public_acl",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:767397659707:subnet/subnet-0a0d7cde01c806cc1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a0d7cde01c806cc1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397659707",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "AppSubnet1"
            },
            "tags_all": {
              "Name": "AppSubnet1"
            },
            "vpc_id": "vpc-0534577e7d342827b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:767397659707:subnet/subnet-00f796de4eb5770bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00f796de4eb5770bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397659707",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "AppSubnet2"
            },
            "tags_all": {
              "Name": "AppSubnet2"
            },
            "vpc_id": "vpc-0534577e7d342827b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:767397659707:subnet/subnet-0b800f4c685250698",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b800f4c685250698",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397659707",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DatabaseSubnet1"
            },
            "tags_all": {
              "Name": "DatabaseSubnet1"
            },
            "vpc_id": "vpc-0534577e7d342827b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:767397659707:subnet/subnet-0ebf4fec1b2efa51b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ebf4fec1b2efa51b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397659707",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DatabaseSubnet2"
            },
            "tags_all": {
              "Name": "DatabaseSubnet2"
            },
            "vpc_id": "vpc-0534577e7d342827b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:767397659707:subnet/subnet-0d0fb1b6608448ecb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d0fb1b6608448ecb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767397659707",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet1"
            },
            "tags_all": {
              "Name": "PublicSubnet1"
            },
            "vpc_id": "vpc-0534577e7d342827b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:767397659707:subnet/subnet-0b0eb999bed811f92",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b0eb999bed811f92",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767397659707",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet2"
            },
            "tags_all": {
              "Name": "PublicSubnet2"
            },
            "vpc_id": "vpc-0534577e7d342827b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "project_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:767397659707:internet-gateway/igw-0dc639a4b42d5e96e",
            "id": "igw-0dc639a4b42d5e96e",
            "owner_id": "767397659707",
            "tags": {
              "Name": "ProjectInternetGateway"
            },
            "tags_all": {
              "Name": "ProjectInternetGateway"
            },
            "vpc_id": "vpc-0534577e7d342827b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "project_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:767397659707:vpc/vpc-0534577e7d342827b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06b3d87f741ca8a8e",
            "default_route_table_id": "rtb-086e70f1ad99639fb",
            "default_security_group_id": "sg-086b688b891244487",
            "dhcp_options_id": "dopt-0a7aa411500ccd0de",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0534577e7d342827b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-086e70f1ad99639fb",
            "owner_id": "767397659707",
            "tags": {
              "Name": "ProjectVPC"
            },
            "tags_all": {
              "Name": "ProjectVPC"
            }
          }
        }
      ]
    }
  ]
}